--- a/aboutme.html
+++ b/aboutme.html
@@ -1,118 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Me | Boyang Zhang</title>
-
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
-
-  <style>
-    /* About Me page-only styles (NO boxes, NO borders) */
-    .about-wrap { max-width: 980px; }
-
-    .about-intro p{
-      margin: 0 0 12px;
-      line-height: 1.85;
-      color: #444;
-      text-align: justify;
-    }
-
-    .about-section{ margin-top: 26px; }
-
-    .about-section h3{
-      font-size: 1.25rem;
-      color: #222;
-      margin: 18px 0 10px;
-      border-left: 4px solid #0066cc;
-      padding-left: 10px;
-    }
-
-    .section-subtitle{
-      margin: -4px 0 12px;
-      color: #666;
-      font-style: italic;
-      line-height: 1.6;
-    }
-
-    .about-desc{
-      margin: 0 0 12px;
-      color: #444;
-      line-height: 1.8;
-      text-align: justify;
-    }
-
-    /* Single media block (no card, no border, no shadow) */
-    .media-stack{
-      display: flex;
-      flex-direction: column;
-      gap: 22px;
-      margin-top: 10px;
-    }
-
-    .media-block{ margin: 0; }
-
-    /* Big landscape visual area */
-    .media-visual{
-      width: 100%;
-      aspect-ratio: 16 / 9;
-      overflow: hidden;
-      background: transparent;
-    }
-
-    .media-visual img,
-    .media-visual video,
-    .media-visual iframe{
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-      border: 0;
-      background: transparent;
-    }
-
-    .media-title{
-      margin: 10px 0 6px;
-      font-size: 1.05rem;
-      font-weight: 800;
-      color: #222;
-    }
-
-    .media-text{
-      margin: 0;
-      font-size: 0.95rem;
-      color: #555;
-      line-height: 1.75;
-      text-align: justify;
-    }
-  </style>
-</head>
-
-<body>
-<header>
-  <nav>
-    <a href="index.html" class="nav-brand">Boyang Zhang</a>
-    <div class="nav-links">
-      <a href="publications.html" class="nav-btn">Publications</a>
-      <a href="research.html" class="nav-btn">Research</a>
-      <a href="news.html" class="nav-btn">News</a>
-      <a href="aboutme.html" class="nav-btn active">About Me</a>
-      <a href="contact.html" class="nav-btn">Contact</a>
-   </div>
-  </nav>
-</header>
-
-<div class="container">
-  <aside class="sidebar" id="sidebar-container"></aside>
-
-  <main class="main-content">
-    <h2 class="section-title" style="margin-top:0;">About Me</h2>
-    <div class="about-wrap" id="aboutme-content"></div>
-  </main>
-</div>
-
-<!-- ✅ Use defer + explicit ./ paths -->
+<!-- Load data first -->
 <script defer src="./sidebar_data.js"></script>
 
 <script
@@ -121,6 +7,31 @@
   onerror="console.error('[AboutMe] Failed to load aboutme_data.js (check file name / path).')"
 ></script>
 
+<!-- Load main renderer -->
 <script defer src="./main.js"></script>
-</body>
-</html>
+
+<!-- Hard check: show a visible error on the page if data didn't load -->
+<script>
+  window.addEventListener("DOMContentLoaded", () => {
+    const host = document.getElementById("aboutme-content");
+    if (!host) return;
+
+    if (!window.aboutmeData) {
+      const msg = document.createElement("div");
+      msg.style.padding = "12px 14px";
+      msg.style.marginTop = "10px";
+      msg.style.background = "#fff3cd";
+      msg.style.border = "1px solid #ffeeba";
+      msg.style.borderRadius = "10px";
+      msg.style.color = "#856404";
+      msg.style.lineHeight = "1.6";
+      msg.innerHTML =
+        "<b>AboutMe data not loaded.</b><br/>" +
+        "Check that <code>aboutme_data.js</code> exists at the site root and contains <code>window.aboutmeData = {...}</code>.";
+      host.prepend(msg);
+      console.error("[AboutMe] window.aboutmeData is undefined. aboutme_data.js didn't execute.");
+    } else {
+      console.log("[AboutMe] Data loaded OK. sections =", window.aboutmeData.sections?.length);
+    }
+  });
+</script>
