--- a/aboutme.html
+++ b/aboutme.html
@@ -90,6 +90,10 @@
 <header>
   <nav>
     <a href="index.html" class="nav-brand">Boyang Zhang</a>
+
+    <!-- Mobile menu button -->
+    <button class="nav-toggle" type="button" aria-label="Toggle navigation">☰</button>
+
     <div class="nav-links">
       <a href="publications.html" class="nav-btn">Publications</a>
       <a href="research.html" class="nav-btn">Research</a>
@@ -99,6 +103,7 @@
     </div>
   </nav>
 </header>
+
 
 <div class="container">
   <aside class="sidebar" id="sidebar-container"></aside>
