--- a/contact.html
+++ b/contact.html
@@ -98,6 +98,10 @@
 <header>
   <nav>
     <a href="index.html" class="nav-brand">Boyang Zhang</a>
+
+    <!-- Mobile menu button -->
+    <button class="nav-toggle" type="button" aria-label="Toggle navigation">☰</button>
+
     <div class="nav-links">
       <a href="publications.html" class="nav-btn">Publications</a>
       <a href="research.html" class="nav-btn">Research</a>
@@ -107,6 +111,7 @@
     </div>
   </nav>
 </header>
+
 
 <div class="container">
   <aside class="sidebar" id="sidebar-container"></aside>
