--- a/publication_rtds.html
+++ b/publication_rtds.html
@@ -97,6 +97,7 @@
   <header>
     <nav>
       <a href="index.html" class="nav-brand">Boyang Zhang</a>
+      <button class="nav-toggle" type="button" aria-label="Toggle navigation">☰</button>
       <div class="nav-links">
         <a href="publications.html" class="nav-btn active">Publications</a>
         <a href="research.html" class="nav-btn">Research</a>
