--- a/research_tracking.html
+++ b/research_tracking.html
@@ -35,6 +35,7 @@
   <header>
     <nav>
       <a href="index.html" class="nav-brand">Boyang Zhang</a>
+      <button class="nav-toggle" type="button" aria-label="Toggle navigation">☰</button>
       <div class="nav-links">
         <a href="publications.html" class="nav-btn">Publications</a>
         <a href="research.html" class="nav-btn active">Research</a>
