--- a/research_hoarding.html
+++ b/research_hoarding.html
@@ -33,8 +33,7 @@
                 <a href="news.html" class="nav-btn">News</a>
                 <a href="aboutme.html" class="nav-btn">About Me</a>
                 <a href="contact.html" class="nav-btn">Contact</a>
-                <button class="icon-btn" id="theme-toggle" aria-label="Toggle dark mode" title="Toggle dark mode">
-</button>            </div>
+           </div>
         </nav>
     </header>
 
